automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1035,7 +1035,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3805,7 +3807,7 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -4494,7 +4496,7 @@
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -4585,9 +4587,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4998,7 +4998,7 @@
     }
    ],
    "source": [
-    "powers_3.reset_index()"
+    "powers_3.reset_index()\n"
    ]
   },
   {
