automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -4998,7 +4998,8 @@
     }
    ],
    "source": [
-    "powers_3.reset_index()\n"
+    "powers_3.reset_index()\n",
+    "len(powers_3['Power'])"
    ]
   },
   {
